--- a/style-guide/partials/head.css
+++ b/style-guide/partials/head.css
@@ -3,6 +3,11 @@
     height: 25px;
 }
 
+.color-mask-box {
+    width: 1px;
+    height: 1px;
+}
+
 section {
     margin-top: 50px;
     margin-left: 50px;
