Adjustment for medium buttons with icons

--- a/style-guide/partials/head.css
+++ b/style-guide/partials/head.css
@@ -163,6 +163,11 @@ div.sg-avatar__image {
 
 .sg-button svg {
     position: relative;
+    bottom: 4px;
+}
+
+.sg-button--large svg {
+    position: relative;
     bottom: 5px;
 }
 
