--- a/style-guide/partials/head.css
+++ b/style-guide/partials/head.css
@@ -158,3 +158,10 @@ div.sg-avatar__image {
     width: 100%;
     justify-content: center;
 }
+
+.sg-input,
+.sg-select,
+.sg-textarea {
+    color: #687b8c;
+}
+
