--- a/style-guide/partials/head.css
+++ b/style-guide/partials/head.css
@@ -136,24 +136,6 @@ div.sg-avatar__image {
     top: 34px !important;
 }
 
-.sg-button svg {
-    position: relative;
-    bottom: 4px;
-    right: 4px;
-}
-
-.sg-button--large svg {
-    position: relative;
-    bottom: 5px;
-    right: 5px;
-}
-
-.sg-button.sg-button--small svg {
-    position: relative;
-    bottom: 2px;
-    right: 3px;
-}
-
 .sg-button {
     width: 100%;
     justify-content: center;
@@ -163,6 +145,10 @@ div.sg-avatar__image {
 .sg-button .sg-button__text{
     width: 100%;
     justify-content: center;
+}
+
+.sg-button--icon-only .sg-button__text {
+    display: none;
 }
 
 .sg-logo[class*="-mobile"] {
