--- a/style-guide/partials/head.css
+++ b/style-guide/partials/head.css
@@ -136,6 +136,42 @@ div.sg-avatar__image {
     top: 34px !important;
 }
 
+.sg-button svg {	
+    position: relative;	
+    bottom: 4px;	
+    right: 4px;	
+}	
+
+.sg-button--large svg {	
+    position: relative;	
+    bottom: 5px;	
+    right: 5px;	
+}	
+
+.sg-button.sg-button--small svg {	
+    position: relative;	
+    bottom: 2px;	
+    right: 3px;	
+}
+
+.sg-button.sg-button--icon-only svg {	
+    position: relative;	
+    bottom: 4px;	
+    right: 3px;	
+}	
+
+.sg-button--large.sg-button--icon-only svg {	
+    position: relative;	
+    bottom: 5px;	
+    right: 4px;	
+}	
+
+.sg-button.sg-button--small.sg-button--icon-only svg {	
+    position: relative;	
+    bottom: 2px;	
+    right: 2px;	
+}
+
 .sg-button {
     width: 100%;
     justify-content: center;
